force-app/main/default/objects/Homepage_Widget_Layout__c/Homepage_Widget_Layout__c.object-meta.xml
<CustomObject>
    <label>Homepage Layout</label>
    <nameField>
        <label>Homepage Widget Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>