force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>