force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Displaying_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Displaying_Application_Status__c</fullName>
    <label>Displaying Application Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DO NOT change value here</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>