force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Field_Reference__c.field-meta.xml
<CustomField>
    <fullName>Field_Reference__c</fullName>
    <label>Field Reference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>