force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Grid_Data__c.field-meta.xml
<CustomField>
    <fullName>Grid_Data__c</fullName>
    <label>Grid Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>