force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Grid_Data_Initial_Size__c.field-meta.xml
<CustomField>
    <fullName>Grid_Data_Initial_Size__c</fullName>
    <label>Grid Data Initial Size</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>