force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Grid_Width__c.field-meta.xml
<CustomField>
    <fullName>Grid_Width__c</fullName>
    <label>Grid Width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>