force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Homepage_Template_Preview__c.field-meta.xml
<CustomField>
    <fullName>Homepage_Template_Preview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homepage Template Preview</label>
    <referenceTo>Homepage_Template__c</referenceTo>
    <relationshipLabel>Homepage Layouts</relationshipLabel>
    <relationshipName>Homepage_Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>