force-app/main/default/objects/Homepage_Widget_Layout__c/fields/Program_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Program_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Catalog</label>
    <referenceTo>Program_Catalog__c</referenceTo>
    <relationshipName>Homepage_Widget_Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>