force-app/main/default/objects/Homepage_Widget_Layout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Reference__c</columns>
    <columns>Displaying_Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>